sfdx-source/dx-training/main/objects/Account/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAT</fullName>
                <label>Catholic</label>
            </value>
            <value>
                <fullName>PRE</fullName>
                <label>Presbyterian</label>
            </value>
            <value>
                <fullName>LUT</fullName>
                <label>Lutheran</label>
            </value>
            <value>
                <fullName>BUD</fullName>
                <label>Buddhist</label>
            </value>
            <value>
                <fullName>JEW</fullName>
                <label>Jewish</label>
            </value>
            <value>
                <fullName>EPI</fullName>
                <label>Episcopal</label>
            </value>
            <value>
                <fullName>BAP</fullName>
                <label>Baptist</label>
            </value>
            <value>
                <fullName>MOM</fullName>
                <label>Mormon-Latter Day Saints</label>
            </value>
            <value>
                <fullName>CHS</fullName>
                <label>Christian Science</label>
            </value>
            <value>
                <fullName>ISL</fullName>
                <label>Islam-Muslim</label>
            </value>
            <value>
                <fullName>HIN</fullName>
                <label>Hindu</label>
            </value>
            <value>
                <fullName>GRE</fullName>
                <label>Greek Orthodox</label>
            </value>
            <value>
                <fullName>JWN</fullName>
                <label>Jehovah&apos;s Witness</label>
            </value>
            <value>
                <fullName>MEN</fullName>
                <label>Mennonite</label>
            </value>
            <value>
                <fullName>MET</fullName>
                <label>Methodist</label>
            </value>
            <value>
                <fullName>NAZ</fullName>
                <label>Nazarene</label>
            </value>
            <value>
                <fullName>NON</fullName>
                <label>Non-Denominational</label>
            </value>
            <value>
                <fullName>PEN</fullName>
                <label>Pentecostal</label>
            </value>
            <value>
                <fullName>PRO</fullName>
                <label>Protestant</label>
            </value>
            <value>
                <fullName>QUA</fullName>
                <label>Quaker</label>
            </value>
            <value>
                <fullName>ADV</fullName>
                <label>Seventh Day Adventist</label>
            </value>
            <value>
                <fullName>UNI</fullName>
                <label>Unitarian Universalist</label>
            </value>
            <value>
                <fullName>SIK</fullName>
                <label>Sikhism</label>
            </value>
            <value>
                <fullName>ZOR</fullName>
                <label>Zoroastrian</label>
            </value>
            <value>
                <fullName>CHR</fullName>
                <label>Christian</label>
            </value>
            <value>
                <fullName>UNK</fullName>
                <label>Unknown-Patient Declined</label>
            </value>
            <value>
                <fullName>JAN</fullName>
                <label>Jainism</label>
            </value>
            <value>
                <fullName>AME</fullName>
                <label>African Methodist Episcopal</label>
            </value>
            <value>
                <fullName>AOG</fullName>
                <label>Assembly of God</label>
            </value>
            <value>
                <fullName>BAH</fullName>
                <label>BAHAI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>