sfdx-source/dx-training/main/objects/Account/fields/Religion_Youreka__c.field-meta.xml
<CustomField>
    <fullName>Religion_Youreka__c</fullName>
    <label>Religion Youreka</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catholic</fullName>
            </value>
            <value>
                <fullName>Presbyterian</fullName>
            </value>
            <value>
                <fullName>Lutheran</fullName>
            </value>
            <value>
                <fullName>Buddhist</fullName>
            </value>
            <value>
                <fullName>Jewish</fullName>
            </value>
            <value>
                <fullName>Episcopal</fullName>
            </value>
            <value>
                <fullName>Baptist</fullName>
            </value>
            <value>
                <fullName>Mormon-Latter Day Saints</fullName>
            </value>
            <value>
                <fullName>Christian Science</fullName>
            </value>
            <value>
                <fullName>Islam-Muslim</fullName>
            </value>
            <value>
                <fullName>Hindu</fullName>
            </value>
            <value>
                <fullName>Greek Orthodox</fullName>
            </value>
            <value>
                <fullName>Jehovah&apos;s Witness</fullName>
            </value>
            <value>
                <fullName>Mennonite</fullName>
            </value>
            <value>
                <fullName>Methodist</fullName>
            </value>
            <value>
                <fullName>Nazarene</fullName>
            </value>
            <value>
                <fullName>Non-Denominational</fullName>
            </value>
            <value>
                <fullName>Pentecostal</fullName>
            </value>
            <value>
                <fullName>Protestant</fullName>
            </value>
            <value>
                <fullName>Quaker</fullName>
            </value>
            <value>
                <fullName>Seventh Day Adventist</fullName>
            </value>
            <value>
                <fullName>Unitarian Universalist</fullName>
            </value>
            <value>
                <fullName>Sikhism</fullName>
            </value>
            <value>
                <fullName>Zoroastrian</fullName>
            </value>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>Unknown-Patient Declined</fullName>
            </value>
            <value>
                <fullName>Jainism</fullName>
            </value>
            <value>
                <fullName>African Methodist Episcopal</fullName>
            </value>
            <value>
                <fullName>Assembly of God</fullName>
            </value>
            <value>
                <fullName>BAHAI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>