sfdx-source/dx-training/main/objects/Account/fields/Revenue_Locations_Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Locations_Dismissed__c</fullName>
    <label>Revenue Locations Dismissed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>