sfdx-source/dx-training/main/objects/Account/fields/ROI_on_File__c.field-meta.xml
<CustomField>
    <fullName>ROI_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ROI on File</label>
    <type>Checkbox</type>
</CustomField>