sfdx-source/dx-training/main/objects/Account/fields/ROI_on_File_Date__c.field-meta.xml
<CustomField>
    <fullName>ROI_on_File_Date__c</fullName>
    <label>ROI on File Date</label>
    <type>Date</type>
</CustomField>