sfdx-source/dx-training/main/objects/Account/fields/Second_Cool_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Second_Cool_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Cool Checkbox</label>
    <type>Checkbox</type>
</CustomField>