sfdx-source/dx-training/main/objects/Account/fields/Self_Pay__c.field-meta.xml
<CustomField>
    <fullName>Self_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self-Pay</label>
    <type>Checkbox</type>
</CustomField>