sfdx-source/dx-training/main/objects/Account/fields/Self_Pay_Formula__c.field-meta.xml
<CustomField>
    <fullName>Self_Pay_Formula__c</fullName>
    <formula>Self_Pay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Self-Pay Formula</label>
    <type>Checkbox</type>
</CustomField>