sfdx-source/dx-training/main/objects/Account/fields/Service_Areas_Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Service_Areas_Dismissed__c</fullName>
    <label>Service Areas Dismissed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>