sfdx-source/dx-training/main/objects/Account/fields/Sex_Youreka__c.field-meta.xml
<CustomField>
    <fullName>Sex_Youreka__c</fullName>
    <label>Sex Youreka</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Choose not to disclose</fullName>
                <isActive>false</isActive>
                <label>Choose not to disclose</label>
            </value>
            <value>
                <fullName>Gender Fluid/Queer</fullName>
                <isActive>false</isActive>
                <label>Gender Fluid/Queer</label>
            </value>
            <value>
                <fullName>Non Binary</fullName>
                <isActive>false</isActive>
                <label>Non Binary</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Transgender Female/Male-to-Female</fullName>
                <isActive>false</isActive>
                <label>Transgender Female/Male-to-Female</label>
            </value>
            <value>
                <fullName>Transgender Male/Female-to-Male</fullName>
                <isActive>false</isActive>
                <label>Transgender Male/Female-to-Male</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>