sfdx-source/dx-training/main/objects/Account/fields/Speaking_With_Patient_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Speaking_With_Patient_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speaking With Patient Indicator</label>
    <type>Checkbox</type>
</CustomField>