sfdx-source/dx-training/main/objects/Account/fields/Special_Needs_Multi__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs_Multi__c</fullName>
    <label>Special Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Wheelchair</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
                <label>Hearing Impaired</label>
            </value>
            <value>
                <fullName>Speech</fullName>
                <label>Speech Impaired</label>
            </value>
            <value>
                <fullName>Visual</fullName>
                <label>Visually Impaired</label>
            </value>
            <value>
                <fullName>SS</fullName>
                <label>Short Stature</label>
            </value>
            <value>
                <fullName>Fall Risk</fullName>
                <label>Risk for Falls</label>
            </value>
            <value>
                <fullName>Bariatric</fullName>
            </value>
            <value>
                <fullName>Stretcher</fullName>
            </value>
            <value>
                <fullName>Risk for Falls2</fullName>
                <isActive>false</isActive>
                <label>Risk for Falls2</label>
            </value>
            <value>
                <fullName>Risk of Falling</fullName>
                <isActive>false</isActive>
                <label>Risk of Falling</label>
            </value>
            <value>
                <fullName>Vision Impaired</fullName>
                <isActive>false</isActive>
                <label>Vision Impaired</label>
            </value>
            <value>
                <fullName>Wheel Chair</fullName>
                <isActive>false</isActive>
                <label>Wheel Chair</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>