sfdx-source/dx-training/main/objects/Account/fields/Special_Needs_Verified__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Needs Verified</label>
    <type>Checkbox</type>
</CustomField>