sfdx-source/dx-training/main/objects/Account/fields/Special_Needs_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs_Verified_Date__c</fullName>
    <label>Special Needs Verified Date</label>
    <type>Date</type>
</CustomField>