sfdx-source/dx-training/main/objects/Account/fields/Special_Needs_Verified_Days_Past__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs_Verified_Days_Past__c</fullName>
    <formula>TODAY() -  Special_Needs_Verified_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Needs Verified Days Past</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>