sfdx-source/dx-training/main/objects/Account/fields/Special_Needs_Youreka__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs_Youreka__c</fullName>
    <label>Special Needs Youreka</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Wheelchair</fullName>
            </value>
            <value>
                <fullName>Hearing Impaired</fullName>
            </value>
            <value>
                <fullName>Speech Impaired</fullName>
            </value>
            <value>
                <fullName>Visually Impaired</fullName>
            </value>
            <value>
                <fullName>Short Stature</fullName>
            </value>
            <value>
                <fullName>Risk for Falls</fullName>
            </value>
            <value>
                <fullName>Bariatric</fullName>
            </value>
            <value>
                <fullName>Stretcher</fullName>
            </value>
            <value>
                <fullName>Risk of Falling</fullName>
                <isActive>false</isActive>
                <label>Risk of Falling</label>
            </value>
            <value>
                <fullName>Wheel Chair</fullName>
                <isActive>false</isActive>
                <label>Wheel Chair</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>