sfdx-source/dx-training/main/objects/Account/fields/SpecialNeeds__c.field-meta.xml
<CustomField>
    <fullName>SpecialNeeds__c</fullName>
    <label>SpecialNeeds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Hearing Impaired</fullName>
            </value>
            <value>
                <fullName>Risk of Falls</fullName>
            </value>
            <value>
                <fullName>Wheelchair</fullName>
            </value>
            <value>
                <fullName>Visually Impaired</fullName>
            </value>
            <value>
                <fullName>Values TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>