sfdx-source/dx-training/main/objects/Account/fields/Specialties_Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Specialties_Dismissed__c</fullName>
    <label>Specialties Dismissed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>