sfdx-source/dx-training/main/objects/Account/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>Not found in HC</description>
    <label>SSN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>