sfdx-source/dx-training/main/objects/Account/fields/SSN_Last_4__c.field-meta.xml
<CustomField>
    <fullName>SSN_Last_4__c</fullName>
    <formula>Right(SSN__c, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSN Last 4</label>
    <type>Text</type>
</CustomField>