sfdx-source/dx-training/main/objects/Account/fields/ssnDeleteMe__c.field-meta.xml
<CustomField>
    <fullName>ssnDeleteMe__c</fullName>
    <label>ssnDeleteMe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>