sfdx-source/dx-training/main/objects/Account/fields/Subscriber_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_ID__c</fullName>
    <label>Subscriber ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>