sfdx-source/dx-training/main/objects/Account/fields/Update_Contact__c.field-meta.xml
<CustomField>
    <fullName>Update_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Youreka form field</description>
    <label>Update Contact</label>
    <type>Checkbox</type>
</CustomField>