sfdx-source/dx-training/main/objects/Account/fields/Update_Email__c.field-meta.xml
<CustomField>
    <fullName>Update_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Email</label>
    <type>Checkbox</type>
</CustomField>