sfdx-source/dx-training/main/objects/Account/fields/Update_Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Update_Special_Needs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Youreka Form field</description>
    <label>Update Special Needs</label>
    <type>Checkbox</type>
</CustomField>