sfdx-source/dx-training/main/objects/Account/fields/US_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>US_Time_Zone__c</fullName>
    <label>US Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pacific Time (Los Angeles)</fullName>
            </value>
            <value>
                <fullName>Mountain Time (Denver)</fullName>
            </value>
            <value>
                <fullName>Central Time (Chicago)</fullName>
            </value>
            <value>
                <fullName>Eastern Time (New York)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>