sfdx-source/dx-training/main/objects/Account/fields/Verified_Prisoner_Patient__c.field-meta.xml
<CustomField>
    <fullName>Verified_Prisoner_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified Prisoner Patient</label>
    <type>Checkbox</type>
</CustomField>