sfdx-source/dx-training/main/objects/Account/fields/VeteranStatus__c.field-meta.xml
<CustomField>
    <fullName>VeteranStatus__c</fullName>
    <description>Not in HC</description>
    <label>Veteran Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>