sfdx-source/dx-training/main/objects/Account/fields/Workers_Comp_Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Referral_Status__c</fullName>
    <label>Workers Comp Referral Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>