sfdx-source/dx-training/main/objects/Account/recordTypes/Medical_Office.recordType-meta.xml
<RecordType>
    <fullName>Medical_Office</fullName>
    <active>true</active>
    <label>Medical Office</label>
</RecordType>