sfdx-source/dx-training/main/objects/Account/validationRules/Preferred_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Preferred_Phone_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND (ISBLANK(PersonWorkPhone__c),ISPICKVAL(Preferred_Phone_Number__c,&quot;Employer&quot;))</errorConditionFormula>
    <errorMessage>Please provide a work phone if the Preferred Phone Number is Employer</errorMessage>
</ValidationRule>