sfdx-source/dx-training/main/objects/Account/validationRules/Preferred_Phone_Validation_Employer.validationRule-meta.xml
<ValidationRule>
    <fullName>Preferred_Phone_Validation_Employer</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISBLANK(PersonWorkPhone__c),ISPICKVAL(Preferred_Phone_Number__c,&quot;Employer&quot;))</errorConditionFormula>
    <errorMessage>Please provide a Work phone number if the Preferred Phone Number is Employer</errorMessage>
</ValidationRule>