sfdx-source/dx-training/main/objects/Account/listViews/All_Patients.listView-meta.xml
<ListView>
    <fullName>All_Patients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PatientType__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Patients</label>
</ListView>