sfdx-source/dx-training/main/objects/Account/listViews/Departments.listView-meta.xml
<ListView>
    <fullName>Departments</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Appointment_Phone__c</columns>
    <columns>Associated_Bill_Areas_Name__c</columns>
    <columns>Department_Abbreviation__c</columns>
    <columns>Department__c</columns>
    <columns>Department_External_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Departments</label>
</ListView>