sfdx-source/dx-training/main/objects/Account/listViews/Payer.listView-meta.xml
<ListView>
    <fullName>Payer</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Payor</label>
</ListView>